Fixed spacing on signup page

--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -52,7 +52,7 @@
             outline: none;
             box-shadow: 5px 5px 10px rgba(rgb(7, 94, 7), 0.1),
                 0 0 3px rgba(rgb(7, 94, 7), 0.1);
-            font-size: 16px;
+            font-size: 14px;
         }
 
         .btn {
