--- a/client/src/pages/Signup/Signup.scss
+++ b/client/src/pages/Signup/Signup.scss
@@ -22,7 +22,7 @@
         margin: 30px 20px;
         box-shadow: 5px 5px 10px rgba(rgb(7, 94, 7), 0.1),
             0 0 3px rgba(rgb(7, 94, 7), 0.1);
-        padding: 40px;
+        padding: 30px;
         border-radius: 20px;
         background: white;
 
@@ -33,7 +33,7 @@
 
         h1 {
             text-align: center;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
         }
 
         input {
@@ -45,7 +45,7 @@
             outline: none;
             box-shadow: 5px 5px 10px rgba(rgb(7, 94, 7), 0.1),
                 0 0 3px rgba(rgb(7, 94, 7), 0.1);
-            font-size: 16px;
+            font-size: 14px;
         }
 
         .btn {
